style.css
/* Reset */
* {
  margin: 0;
  padding: 0;
}

html,
body {
  height: 100%;
  margin: 0;
  font-family: 'Montserrat', 'sans-serif';
  color: #424242;
  overflow: hidden;
  background: #f2f4f8;
}
.display {
  text-align: center;
  display: table;
  height: 100%;
  max-width: 1280px;
  width: 100%;
  margin: 0 auto;
}
.wrap {
  display: table-cell;
  vertical-align: middle;
}
p {
  font-size: 100px; /* For lamers who don't support viewport sizing */
  font-size: 40vmin;
  text-align: center;
  margin: 0;
}
p.text-display {
  display: inline-block;
  color: #5e5e5e;
  font: bold 20px arial;
  text-decoration: none;
  text-align: center;
  margin: 20px auto;
  padding: 15px 20px;
  background: #fbfbfb;
  border-radius: 4px;
  border-top: 1px solid #dadada;
  box-shadow: inset 0 0 25px #e8e8e8, 0 1px 0 #c3c3c3, 0 2px 0 #c9c9c9, 0 2px 3px #333;
  text-shadow: 0px 1px 0px #f5f5f5;
  min-width: 24px;
  font-size: 26px;
}

span.love {
  display: block;
  position: absolute;
  bottom: 10px;
  width: 100%;
  text-align: center;
}

span.love a {
  text-decoration: none;
  color: #d12026;
}

.twitter-follow-toggle-button {
  vertical-align: text-bottom;
}

.twitter-share-toggle-button {
  vertical-align: text-bottom;
}

/*
  Added New Card layout Css
*/
.cards {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: baseline;
  margin-bottom: 20px;
}
.card {
  background: #fff;
  border-radius: 5px;
  overflow: hidden;
  margin: 10px;
  flex: calc(25% - 20px);
  max-width: calc(25% - 20px);
  box-shadow: 0 14px 26px rgba(0, 0, 0, 0.04);
  transition: all 0.3s ease-out;
  text-decoration: none;
  border: 1px solid rgba(0, 0, 0, 0.11);
}

.card:first-child {
  margin-left: 0;
}

.card:last-child {
  margin-right: 0;
}

.item-location .card-main {
  padding: 9.5px;
}

.item-location .main-description {
  font-size: 23px;
}

.item-location .main-description span {
  display: block;
}

.card:hover {
  cursor: pointer;
  transform: translateY(-5px) scale(1.005) translateZ(0);
  box-shadow: 0 24px 36px rgba(0, 0, 0, 0.11), 0 24px 46px rgba(220, 233, 255, 0.48);
}

.card-header {
  text-align: center;
  font-size: 12px;
  font-weight: 600;
  border-bottom: 1px solid #a2e2ff;
  background-color: #b9e9ff;
  padding: 5px 10px;
  position: relative;
}

.more-info {
  height: 1.2em;
  width: 1.2em;
  float: right;
}

.more-info::before {
  content: '(?)';
}

.deprecated-link {
  position: absolute;
  top: 6px;
  right: 12px;
  color: #6597b2;
  font-size: 10px;
}

.card-main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 15px 0;
}

.main-description {
  font-size: 28px;
  text-align: center;
  min-height: 35px;
}

.text-muted {
  font-size: 0.65em;
  color: #ccc;
}

.table {
  width: 50%;
  table-layout: fixed;
  margin: auto;
  margin-top: 75px;
  box-shadow: 0 14px 26px rgba(0, 0, 0, 0.04);
  border-radius: 5px;
  border-collapse: collapse;
}

.table-body {
  display: block;
  width: 100%;
  overflow: auto;
  height: 600px;
  background: #fff;
}

.table thead tr {
  display: block;
  border-radius: 5px;
}

.table thead {
  font-size: 12px;
  font-weight: 600;
  border-bottom: 1px solid #a2e2ff;
  background-color: #b9e9ff;
}

.table th,
.table td {
  padding: 0.3rem 1rem;
  text-align: left;
  min-width: 100px;
  font-size: 1.2rem;
}

.table th {
  padding: 0.5rem 1rem;
}
.table td {
  border-bottom: 1px solid #dee2e6;
}
.table tbody tr:hover {
  background-color: rgba(0, 0, 0, 0.075);
}

.table-toggle-button {
  font: bold 16px arial;
  position: absolute;
  top: 15px;
  right: 15px;
  color: #0091d4;
  border: 2px solid #0091d4;
  background: transparent;
  border-radius: 5px;
  padding: 5px 10px;
  transition: all 0.3s ease-out;
}

.table-toggle-button:hover {
  transform: translateY(-2px) scale(1.005) translateZ(0);
  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.11), 0 6px 9px rgba(220, 233, 255, 0.48);
}

.table-toggle-button:active {
  transform: translateY(2px) scale(0.995) translateZ(0);
  box-shadow: none;
}

.mobile-input input {
  width: calc(100% - 20px);
  height: 4rem;
  margin: 10px;
  font-size: 4rem;
  border: 1px solid #dadada;
  border-radius: 4px;
  box-shadow: 0 14px 26px rgba(0, 0, 0, 0.04);
  transition: all 0.3s ease-out;
}

.mobile-input input:focus {
  outline: none;
  transform: translateY(-5px) scale(1.005) translateZ(0);
  box-shadow: 0 24px 36px rgba(0, 0, 0, 0.11), 0 24px 46px rgba(220, 233, 255, 0.48);
}

@media (min-width: 601px) and (max-width: 980px) {
  body {
    overflow-y: auto;
  }
  .card {
    flex: 45%;
    max-width: 45%;
  }
  .display {
    width: 80%;
  }
  .main-description {
    min-height: 34px;
  }
}
@media (max-width: 600px) {
  body {
    overflow-y: auto;
  }
  .card {
    flex: 100%;
    max-width: 100%;
  }
  .display {
    width: 90%;
  }
  .table {
    width: 100%;
    margin-top: 4rem;
  }
  .table-body {
    height: 60vh;
  }
}

.hide {
  display: none !important;
}
.active {
  display: flex;
}

